@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.mlslive" name="MLS Live" version="1.15.2" provider-name="Micah Galizia">
+<addon id="plugin.video.mlslive" name="MLS Live" version="1.15.3" provider-name="Micah Galizia">
   <requires>
     <import addon="xbmc.python"   version="2.1.0"/>
   </requires>
